@@ -1,0 +1,21 @@
+<run>
+<precisionModel type="FLOATING" />
+
+<case>
+<desc>
+http://trac.osgeo.org/geos/ticket/586
+</desc>
+  <a>
+ 01060000000100000001030000000100000009000000BE8DDFFA0CBD53C093FFD4E6C47445403F50C5862EBA54C0B2C2E999FBFE44407956D4D779AB57C07424CD3AAB624840EC40FA17D1C957C00C44C705A8B04840F99206C0D5C957C065913D7FB86B4A40B7ADCBA66E3456C0E36D8008FE6A4C40D76A0B20BE8B54C0E4AFA979C68E4B40A8B2E89E7C9452C0986ABE9F15984640BE8DDFFA0CBD53C093FFD4E6C4744540
+  </a>
+  <b>
+0102000020E61000001A0000009D11A5BDC19754C005172B6A305D454008944DB9C29754C0A1B94E232D5D454044FAEDEBC09754C07099D365315D45409D11A5BDC19754C05A0D897B2C5D454012DA722EC59754C07099D365315D4540793BC269C19754C07EE36BCF2C5D454008944DB9C29754C0936FB6B9315D4540C0E78711C29754C03012DA722E5D454020240B98C09754C0459E245D335D4540E4BD6A65C29754C0697407B1335D45409D11A5BDC19754C03012DA722E5D45408481E7DEC39754C0B745990D325D4540793BC269C19754C03012DA722E5D45402B6A300DC39754C04CC3F011315D454020240B98C09754C0697407B1335D454008944DB9C29754C0DA1B7C61325D454020240B98C09754C0A1B94E232D5D45402B6A300DC39754C0B745990D325D45409D11A5BDC19754C0C58F31772D5D4540D97745F0BF9754C0B745990D325D4540C0E78711C29754C04CC3F011315D4540793BC269C19754C01361C3D32B5D4540FD4D2844C09754C0BE6A65C22F5D454008944DB9C29754C0B745990D325D454020240B98C09754C03737A6272C5D4540C0E78711C29754C077BE9F1A2F5D4540
+  </b>
+<test>
+  <op name="intersection" arg1="A" arg2="B">
+ 0105000000EC000000010200000003000000AB2D26D9C09754C0454791C32D5D4540FD4D2844C09754C0BE6A65C22F5D4540249292AFC09754C02777A626305D4540010200000003000000C536AFDEC09754C0EBDE96B02D5D454020240B98C09754C0A1B94E232D5D4540AB2D26D9C09754C0454791C32D5D4540010200000003000000E6DF4401C19754C052634670335D454020240B98C09754C0697407B1335D454012DC3BDBC09754C088055C69335D454001020000000300000001E30A0DC19754C0F9B4A5112D5D454020240B98C09754C03737A6272C5D4540B47885FEC09754C06E216F432D5D45400102000000030000008225D927C19754C05544CB7D315D4540D97745F0BF9754C0B745990D325D4540249292AFC09754C02777A626305D45400102000000030000008225D927C19754C05544CB7D315D454020240B98C09754C0459E245D335D454012DC3BDBC09754C088055C69335D4540010200000003000000A9F7A63BC19754C03C2B64A9305D454044FAEDEBC09754C07099D365315D4540A8F3D611C19754C019C15D82305D4540010200000003000000BAB7DC8EC19754C01B4397FC2C5D4540793BC269C19754C01361C3D32B5D454001E30A0DC19754C0F9B4A5112D5D45400102000000030000000FF8C694C19754C0AFA6BD702D5D4540793BC269C19754C07EE36BCF2C5D4540BAB7DC8EC19754C01B4397FC2C5D45400102000000030000000FC48C03C29754C0C5A517A2305D4540C0E78711C29754C04CC3F011315D4540C4995FCDC19754C099D36531315D45400102000000030000006693640BC29754C006D64F872E5D45409D11A5BDC19754C0C58F31772D5D4540888753A6C19754C0B5C08CB22D5D454001020000000300000075E0D019C29754C0B7ED469C2E5D4540C0E78711C29754C03012DA722E5D45406693640BC29754C006D64F872E5D4540010200000003000000E8327644C29754C08B1C63A9325D4540E4BD6A65C29754C0697407B1335D4540E6DF4401C19754C052634670335D4540010200000003000000BD4CEB75C29754C0B65E27FC2F5D45408481E7DEC39754C0B745990D325D4540BD28DC48C29754C0B460725E2F5D45400102000000030000009B406982C29754C0A7C45DDA315D454008944DB9C29754C0DA1B7C61325D4540E8327644C29754C08B1C63A9325D454001020000000300000058D7BD86C29754C04103D19A2D5D45409D11A5BDC19754C05A0D897B2C5D4540CA60DFA3C19754C04F322B162D5D4540010200000003000000EE07068FC29754C0485F8498315D454008944DB9C29754C0B745990D325D45409B406982C29754C0A7C45DDA315D454001020000000300000020A80991C29754C0A77686A92D5D454008944DB9C29754C0A1B94E232D5D454058D7BD86C29754C04103D19A2D5D454001020000000300000020A80991C29754C0A77686A92D5D454012DA722EC59754C07099D365315D4540CC20F971C29754C069E412112E5D4540010200000003000000DBC165ACC29754C0B2542F79315D454008944DB9C29754C0936FB6B9315D4540405D0CA9C29754C025E2C17C315D4540010200000003000000A0DB14D6C29754C0D0D2B84C315D45402B6A300DC39754C0B745990D325D45402A6C20BBC29754C0B4497969315D4540010200000003000000A0DB14D6C29754C0D0D2B84C315D45402B6A300DC39754C04CC3F011315D454036C7BC88C29754C05E8B043E305D4540010200000002000000C536AFDEC09754C0EBDE96B02D5D4540AB2D26D9C09754C0454791C32D5D4540010200000002000000B47885FEC09754C06E216F432D5D4540C536AFDEC09754C0EBDE96B02D5D4540010200000002000000E6DF4401C19754C052634670335D454012DC3BDBC09754C088055C69335D454001020000000200000001E30A0DC19754C0F9B4A5112D5D4540B47885FEC09754C06E216F432D5D4540010200000002000000A8F3D611C19754C019C15D82305D4540249292AFC09754C02777A626305D4540010200000002000000A9F7A63BC19754C03C2B64A9305D4540A8F3D611C19754C019C15D82305D454001020000000200000019EC0E3EC19754C02C92F5BB2E5D4540249292AFC09754C02777A626305D454001020000000200000019EC0E3EC19754C02C92F5BB2E5D4540AB2D26D9C09754C0454791C32D5D4540010200000002000000DE48EA4EC19754C01E030D912E5D4540C536AFDEC09754C0EBDE96B02D5D4540010200000002000000DE48EA4EC19754C01E030D912E5D454019EC0E3EC19754C02C92F5BB2E5D45400102000000020000000AE96754C19754C0CC00F8F22E5D4540A8F3D611C19754C019C15D82305D45400102000000020000000AE96754C19754C0CC00F8F22E5D454019EC0E3EC19754C02C92F5BB2E5D45400102000000020000005C55F65DC19754C028FA69C9305D45408225D927C19754C05544CB7D315D45400102000000020000005C55F65DC19754C028FA69C9305D4540A9F7A63BC19754C03C2B64A9305D4540010200000002000000B5E0455FC19754C0CB32C4B12E5D4540DE48EA4EC19754C01E030D912E5D4540010200000002000000B5E0455FC19754C0CB32C4B12E5D45400AE96754C19754C0CC00F8F22E5D45400102000000020000008063CC63C19754C054BFE45B2E5D4540B47885FEC09754C06E216F432D5D45400102000000020000008063CC63C19754C054BFE45B2E5D4540DE48EA4EC19754C01E030D912E5D4540010200000002000000793BC269C19754C03012DA722E5D4540B5E0455FC19754C0CB32C4B12E5D4540010200000002000000AB9B7E6AC19754C006D16F6E2E5D45408063CC63C19754C054BFE45B2E5D4540010200000002000000AB9B7E6AC19754C006D16F6E2E5D4540793BC269C19754C03012DA722E5D45400102000000020000006C6EB66EC19754C0A5181E7A2E5D4540793BC269C19754C03012DA722E5D45400102000000020000006C6EB66EC19754C0A5181E7A2E5D4540AB9B7E6AC19754C006D16F6E2E5D4540010200000002000000EE0C476FC19754C08694AE7B2E5D4540793BC269C19754C03012DA722E5D4540010200000002000000EE0C476FC19754C08694AE7B2E5D45406C6EB66EC19754C0A5181E7A2E5D454001020000000200000063DECB74C19754C0B540A0302E5D45408063CC63C19754C054BFE45B2E5D454001020000000200000063DECB74C19754C0B540A0302E5D4540AB9B7E6AC19754C006D16F6E2E5D454001020000000200000002F1BA7EC19754C0FBD005F52D5D454001E30A0DC19754C0F9B4A5112D5D454001020000000200000002F1BA7EC19754C0FBD005F52D5D454063DECB74C19754C0B540A0302E5D45400102000000020000003EAD4786C19754C072491F042E5D454063DECB74C19754C0B540A0302E5D45400102000000020000003EAD4786C19754C072491F042E5D454002F1BA7EC19754C0FBD005F52D5D45400102000000020000000FF8C694C19754C0AFA6BD702D5D454002F1BA7EC19754C0FBD005F52D5D45400102000000020000004491B199C19754C06E0F3E532D5D4540BAB7DC8EC19754C01B4397FC2C5D45400102000000020000004491B199C19754C06E0F3E532D5D45400FF8C694C19754C0AFA6BD702D5D4540010200000002000000F14324A3C19754C07BA5C7B42F5D4540A9F7A63BC19754C03C2B64A9305D4540010200000002000000F14324A3C19754C07BA5C7B42F5D45400AE96754C19754C0CC00F8F22E5D4540010200000002000000CA60DFA3C19754C04F322B162D5D4540BAB7DC8EC19754C01B4397FC2C5D4540010200000002000000CA60DFA3C19754C04F322B162D5D45404491B199C19754C06E0F3E532D5D4540010200000002000000BFF0F8A4C19754C0440B79AD2D5D45400FF8C694C19754C0AFA6BD702D5D4540010200000002000000BFF0F8A4C19754C0440B79AD2D5D45404491B199C19754C06E0F3E532D5D45400102000000020000001BD9C7A5C19754C0264EF0B32D5D45403EAD4786C19754C072491F042E5D45400102000000020000001BD9C7A5C19754C0264EF0B32D5D4540BFF0F8A4C19754C0440B79AD2D5D4540010200000002000000888753A6C19754C0B5C08CB22D5D4540BFF0F8A4C19754C0440B79AD2D5D4540010200000002000000888753A6C19754C0B5C08CB22D5D45401BD9C7A5C19754C0264EF0B32D5D4540010200000002000000B0FF15ABC19754C065C255C82F5D45405C55F65DC19754C028FA69C9305D4540010200000002000000B0FF15ABC19754C065C255C82F5D4540F14324A3C19754C07BA5C7B42F5D45400102000000020000009D11A5BDC19754C03012DA722E5D45403EAD4786C19754C072491F042E5D45400102000000020000009D11A5BDC19754C03012DA722E5D45401BD9C7A5C19754C0264EF0B32D5D45400102000000020000009D11A5BDC19754C03012DA722E5D45409D11A5BDC19754C03112DA722E5D4540010200000002000000137664BFC19754C0875D01722F5D4540B5E0455FC19754C0CB32C4B12E5D4540010200000002000000137664BFC19754C0875D01722F5D4540F14324A3C19754C07BA5C7B42F5D4540010200000002000000D6ADFFBFC19754C0F5F3AE852E5D45409D11A5BDC19754C03112DA722E5D4540010200000002000000FF3EE3C2C19754C05FEFFE782F5D4540B0FF15ABC19754C065C255C82F5D4540010200000002000000FF3EE3C2C19754C05FEFFE782F5D4540137664BFC19754C0875D01722F5D4540010200000002000000B4BB28C4C19754C00A16BD662F5D4540EE0C476FC19754C08694AE7B2E5D4540010200000002000000B4BB28C4C19754C00A16BD662F5D4540137664BFC19754C0875D01722F5D454001020000000200000035D474C6C19754C0AAA8196D2F5D4540FF3EE3C2C19754C05FEFFE782F5D454001020000000200000035D474C6C19754C0AAA8196D2F5D4540B4BB28C4C19754C00A16BD662F5D4540010200000002000000C4995FCDC19754C099D36531315D45408225D927C19754C05544CB7D315D4540010200000002000000C4995FCDC19754C099D36531315D45405C55F65DC19754C028FA69C9305D454001020000000200000051F379D0C19754C0D31F81092F5D45406C6EB66EC19754C0A5181E7A2E5D454001020000000200000051F379D0C19754C0D31F81092F5D4540D6ADFFBFC19754C0F5F3AE852E5D454001020000000200000052F379D0C19754C0D41F81092F5D4540D6ADFFBFC19754C0F5F3AE852E5D454001020000000200000052F379D0C19754C0D41F81092F5D454051F379D0C19754C0D31F81092F5D45400102000000020000007439B0D1C19754C0E43C5B27305D4540B0FF15ABC19754C065C255C82F5D45400102000000020000007439B0D1C19754C0E43C5B27305D45409D11A5BDC19754C005172B6A305D454001020000000200000024C79DD2C19754C08D2991442F5D4540B4BB28C4C19754C00A16BD662F5D454001020000000200000024C79DD2C19754C08D2991442F5D454035D474C6C19754C0AAA8196D2F5D454001020000000200000025C79DD2C19754C077BE9F1A2F5D4540EE0C476FC19754C08694AE7B2E5D454001020000000200000025C79DD2C19754C077BE9F1A2F5D454051F379D0C19754C0D31F81092F5D454001020000000200000026C79DD2C19754C078BE9F1A2F5D454052F379D0C19754C0D41F81092F5D454001020000000200000026C79DD2C19754C078BE9F1A2F5D454025C79DD2C19754C077BE9F1A2F5D45400102000000020000007A3251D6C19754C01A193B382F5D454024C79DD2C19754C08D2991442F5D45400102000000020000007A3251D6C19754C01A193B382F5D454025C79DD2C19754C077BE9F1A2F5D45400102000000020000007A3251D6C19754C019193B382F5D454026C79DD2C19754C078BE9F1A2F5D45400102000000020000007A3251D6C19754C019193B382F5D45407A3251D6C19754C01A193B382F5D454001020000000200000037D8A9D6C19754C00347003B2F5D454024C79DD2C19754C08D2991442F5D454001020000000200000037D8A9D6C19754C00347003B2F5D45407A3251D6C19754C01A193B382F5D454001020000000200000037D8A9D6C19754C00247003B2F5D45407A3251D6C19754C019193B382F5D454001020000000200000037D8A9D6C19754C00247003B2F5D454037D8A9D6C19754C00347003B2F5D454001020000000200000018481EDBC19754C061263A282F5D454026C79DD2C19754C078BE9F1A2F5D454001020000000200000018481EDBC19754C061263A282F5D45407A3251D6C19754C019193B382F5D454001020000000200000074C232DDC19754C05B1D8E2B2F5D454037D8A9D6C19754C00247003B2F5D454001020000000200000074C232DDC19754C05B1D8E2B2F5D454018481EDBC19754C061263A282F5D4540010200000002000000E36444DEC19754C0BB1BBB1D2F5D454052F379D0C19754C0D41F81092F5D4540010200000002000000E36444DEC19754C0BB1BBB1D2F5D454018481EDBC19754C061263A282F5D4540010200000002000000DF0033DFC19754C01F739EB12F5D4540FF3EE3C2C19754C05FEFFE782F5D4540010200000002000000DF0033DFC19754C01F739EB12F5D454035D474C6C19754C0AAA8196D2F5D45400102000000020000009F7C37E1C19754C0DF930E222F5D454074C232DDC19754C05B1D8E2B2F5D45400102000000020000009F7C37E1C19754C0DF930E222F5D4540E36444DEC19754C0BB1BBB1D2F5D4540010200000002000000AE7C96E7C19754C0BD6A65C22F5D454037D8A9D6C19754C00347003B2F5D4540010200000002000000AE7C96E7C19754C0BD6A65C22F5D4540DF0033DFC19754C01F739EB12F5D4540010200000002000000AF7C96E7C19754C0BF6A65C22F5D454037D8A9D6C19754C00247003B2F5D4540010200000002000000AF7C96E7C19754C0BF6A65C22F5D4540AE7C96E7C19754C0BD6A65C22F5D4540010200000002000000845783E8C19754C06641CCC92F5D4540AE7C96E7C19754C0BD6A65C22F5D4540010200000002000000845783E8C19754C06641CCC92F5D4540AF7C96E7C19754C0BF6A65C22F5D4540010200000002000000204BD2E8C19754C051DE43CC2F5D4540204BD2E8C19754C052DE43CC2F5D4540010200000002000000204BD2E8C19754C050DE43CC2F5D4540204BD2E8C19754C052DE43CC2F5D4540010200000002000000204BD2E8C19754C050DE43CC2F5D4540204BD2E8C19754C051DE43CC2F5D4540010200000002000000204BD2E8C19754C04FDE43CC2F5D4540204BD2E8C19754C050DE43CC2F5D4540010200000002000000204BD2E8C19754C04EDE43CC2F5D4540204BD2E8C19754C04FDE43CC2F5D4540010200000002000000204BD2E8C19754C04DDE43CC2F5D4540204BD2E8C19754C04EDE43CC2F5D4540010200000002000000204BD2E8C19754C04CDE43CC2F5D4540204BD2E8C19754C04DDE43CC2F5D4540010200000002000000204BD2E8C19754C04BDE43CC2F5D4540204BD2E8C19754C04CDE43CC2F5D4540010200000002000000204BD2E8C19754C04ADE43CC2F5D4540204BD2E8C19754C04BDE43CC2F5D4540010200000002000000204BD2E8C19754C048DE43CC2F5D4540204BD2E8C19754C04ADE43CC2F5D4540010200000002000000204BD2E8C19754C047DE43CC2F5D4540204BD2E8C19754C048DE43CC2F5D4540010200000002000000204BD2E8C19754C046DE43CC2F5D4540204BD2E8C19754C047DE43CC2F5D4540010200000002000000204BD2E8C19754C045DE43CC2F5D4540204BD2E8C19754C046DE43CC2F5D4540010200000002000000204BD2E8C19754C044DE43CC2F5D4540204BD2E8C19754C045DE43CC2F5D4540010200000002000000204BD2E8C19754C043DE43CC2F5D4540845783E8C19754C06641CCC92F5D4540010200000002000000204BD2E8C19754C043DE43CC2F5D4540204BD2E8C19754C044DE43CC2F5D4540010200000002000000204BD2E8C19754C042DE43CC2F5D4540DF0033DFC19754C01F739EB12F5D4540010200000002000000204BD2E8C19754C042DE43CC2F5D4540845783E8C19754C06641CCC92F5D4540010200000002000000204BD2E8C19754C042DE43CC2F5D4540204BD2E8C19754C044DE43CC2F5D4540010200000002000000204BD2E8C19754C042DE43CC2F5D4540204BD2E8C19754C043DE43CC2F5D45400102000000020000007AB60BE9C19754C01D390FCE2F5D4540204BD2E8C19754C052DE43CC2F5D45400102000000020000007AB60BE9C19754C01D390FCE2F5D4540204BD2E8C19754C051DE43CC2F5D454001020000000200000091190EEAC19754C0D75122D62F5D45407439B0D1C19754C0E43C5B27305D454001020000000200000091190EEAC19754C0D75122D62F5D45407AB60BE9C19754C01D390FCE2F5D454001020000000200000092190EEAC19754C0D65122D62F5D45407AB60BE9C19754C01D390FCE2F5D454001020000000200000092190EEAC19754C0D65122D62F5D454091190EEAC19754C0D75122D62F5D454001020000000200000085CA1CEBC19754C0FF039CD22F5D4540204BD2E8C19754C052DE43CC2F5D454001020000000200000085CA1CEBC19754C0FF039CD22F5D454092190EEAC19754C0D65122D62F5D454001020000000200000011AAD4ECC19754C083C5E1CC2F5D4540AF7C96E7C19754C0BF6A65C22F5D454001020000000200000011AAD4ECC19754C083C5E1CC2F5D454085CA1CEBC19754C0FF039CD22F5D4540010200000002000000BC879AF0C19754C0780117C92E5D4540888753A6C19754C0B5C08CB22D5D4540010200000002000000BC879AF0C19754C0780117C92E5D45409D11A5BDC19754C03012DA722E5D454001020000000200000073D712F2C19754C0DC9DB5DB2E5D45409D11A5BDC19754C03112DA722E5D454001020000000200000073D712F2C19754C0DC9DB5DB2E5D4540E36444DEC19754C0BB1BBB1D2F5D45400102000000020000001D8DECF3C19754C0A4958AD52E5D4540BC879AF0C19754C0780117C92E5D45400102000000020000001D8DECF3C19754C0A4958AD52E5D454073D712F2C19754C0DC9DB5DB2E5D4540010200000002000000329548F5C19754C0B57A02D12E5D4540BC879AF0C19754C0780117C92E5D4540010200000002000000329548F5C19754C0B57A02D12E5D45401D8DECF3C19754C0A4958AD52E5D45400102000000020000004B6910F9C19754C08EC1B0E92E5D45409F7C37E1C19754C0DF930E222F5D45400102000000020000004B6910F9C19754C08EC1B0E92E5D454073D712F2C19754C0DC9DB5DB2E5D4540010200000002000000430035F9C19754C072455AE92E5D45401D8DECF3C19754C0A4958AD52E5D4540010200000002000000430035F9C19754C072455AE92E5D45404B6910F9C19754C08EC1B0E92E5D4540010200000002000000DC3C90F9C19754C0AE68B0EA2E5D45404B6910F9C19754C08EC1B0E92E5D4540010200000002000000DC3C90F9C19754C0AE68B0EA2E5D4540430035F9C19754C072455AE92E5D45400102000000020000000F6092FDC19754C07A3409DF2E5D4540329548F5C19754C0B57A02D12E5D45400102000000020000000F6092FDC19754C07A3409DF2E5D4540430035F9C19754C072455AE92E5D45400102000000020000000FC48C03C29754C0C5A517A2305D45407439B0D1C19754C0E43C5B27305D45400102000000020000000FC48C03C29754C0C5A517A2305D454091190EEAC19754C0D75122D62F5D454001020000000200000010C48C03C29754C0C6A517A2305D454092190EEAC19754C0D65122D62F5D454001020000000200000010C48C03C29754C0C6A517A2305D45400FC48C03C29754C0C5A517A2305D4540010200000002000000244D7608C29754C042FBC6702F5D454074C232DDC19754C05B1D8E2B2F5D4540010200000002000000244D7608C29754C042FBC6702F5D454011AAD4ECC19754C083C5E1CC2F5D45400102000000020000006693640BC29754C006D64F872E5D4540329548F5C19754C0B57A02D12E5D4540010200000002000000DBDBDE0CC29754C08C1F15622F5D45409F7C37E1C19754C0DF930E222F5D4540010200000002000000DBDBDE0CC29754C08C1F15622F5D4540244D7608C29754C042FBC6702F5D4540010200000002000000C0E78711C29754C077BE9F1A2F5D4540DC3C90F9C19754C0AE68B0EA2E5D454001020000000200000010328113C29754C03200F84B2F5D4540DC3C90F9C19754C0AE68B0EA2E5D454001020000000200000010328113C29754C03200F84B2F5D4540DBDBDE0CC29754C08C1F15622F5D45400102000000020000006743C814C29754C007BE2CA82E5D45400F6092FDC19754C07A3409DF2E5D45400102000000020000006743C814C29754C007BE2CA82E5D45406693640BC29754C006D64F872E5D454001020000000200000075E0D019C29754C0B7ED469C2E5D45406743C814C29754C007BE2CA82E5D45400102000000020000009BFBFB1EC29754C01E62917D315D4540C4995FCDC19754C099D36531315D45400102000000020000009BFBFB1EC29754C01E62917D315D454010C48C03C29754C0C6A517A2305D4540010200000002000000F46B7321C29754C04B5944802F5D4540DBDBDE0CC29754C08C1F15622F5D4540010200000002000000F46B7321C29754C04B5944802F5D454010328113C29754C03200F84B2F5D4540010200000002000000DC64CB21C29754C08801561C2F5D45400F6092FDC19754C07A3409DF2E5D4540010200000002000000DC64CB21C29754C08801561C2F5D454010328113C29754C03200F84B2F5D4540010200000002000000F1FF202CC29754C0EC51E3F92E5D45406743C814C29754C007BE2CA82E5D4540010200000002000000F1FF202CC29754C0EC51E3F92E5D4540DC64CB21C29754C08801561C2F5D45400102000000020000005BDA5F2CC29754C036CF11F92E5D454075E0D019C29754C0B7ED469C2E5D45400102000000020000005BDA5F2CC29754C036CF11F92E5D4540F1FF202CC29754C0EC51E3F92E5D454001020000000200000067B6D72CC29754C07A70FCAA2F5D4540244D7608C29754C042FBC6702F5D454001020000000200000067B6D72CC29754C07A70FCAA2F5D4540F46B7321C29754C04B5944802F5D4540010200000002000000202F7E2DC29754C01177A9FE2E5D4540F1FF202CC29754C0EC51E3F92E5D4540010200000002000000202F7E2DC29754C01177A9FE2E5D45405BDA5F2CC29754C036CF11F92E5D45400102000000020000006442232FC29754C06598CBFE315D454012DC3BDBC09754C088055C69335D45400102000000020000006442232FC29754C06598CBFE315D45409BFBFB1EC29754C01E62917D315D4540010200000002000000EA07733CC29754C001B371492F5D4540DC64CB21C29754C08801561C2F5D4540010200000002000000EA07733CC29754C001B371492F5D4540202F7E2DC29754C01177A9FE2E5D4540010200000002000000E8327644C29754C08B1C63A9325D4540E6DF4401C19754C052634670335D4540010200000002000000E8327644C29754C08B1C63A9325D45406442232FC29754C06598CBFE315D4540010200000002000000BD28DC48C29754C0B460725E2F5D4540202F7E2DC29754C01177A9FE2E5D4540010200000002000000BD28DC48C29754C0B460725E2F5D4540EA07733CC29754C001B371492F5D454001020000000200000048122C57C29754C0D7E60ECF2F5D4540F46B7321C29754C04B5944802F5D454001020000000200000048122C57C29754C0D7E60ECF2F5D4540EA07733CC29754C001B371492F5D4540010200000002000000E86DA85EC29754C048428FF92D5D4540CA60DFA3C19754C04F322B162D5D4540010200000002000000E86DA85EC29754C048428FF92D5D454075E0D019C29754C0B7ED469C2E5D45400102000000020000001E847B60C29754C005209CFD2F5D454067B6D72CC29754C07A70FCAA2F5D45400102000000020000001E847B60C29754C005209CFD2F5D454048122C57C29754C0D7E60ECF2F5D4540010200000002000000D4913668C29754C09832EAC1315D45409BFBFB1EC29754C01E62917D315D4540010200000002000000D4913668C29754C09832EAC1315D45406442232FC29754C06598CBFE315D4540010200000002000000CC20F971C29754C069E412112E5D45405BDA5F2CC29754C036CF11F92E5D4540010200000002000000CC20F971C29754C069E412112E5D4540E86DA85EC29754C048428FF92D5D4540010200000002000000C47F8F73C29754C0329BCFB5315D454010C48C03C29754C0C6A517A2305D4540010200000002000000C47F8F73C29754C0329BCFB5315D4540D4913668C29754C09832EAC1315D4540010200000002000000BD4CEB75C29754C0B65E27FC2F5D4540BD28DC48C29754C0B460725E2F5D4540010200000002000000BD4CEB75C29754C0B65E27FC2F5D454048122C57C29754C0D7E60ECF2F5D45400102000000020000009B406982C29754C0A7C45DDA315D4540D4913668C29754C09832EAC1315D45400102000000020000009B406982C29754C0A7C45DDA315D4540C47F8F73C29754C0329BCFB5315D454001020000000200000058D7BD86C29754C04103D19A2D5D4540E86DA85EC29754C048428FF92D5D454001020000000200000036C7BC88C29754C05E8B043E305D45401E847B60C29754C005209CFD2F5D454001020000000200000036C7BC88C29754C05E8B043E305D4540BD4CEB75C29754C0B65E27FC2F5D45400102000000020000003E3E5E89C29754C0DCEDF405315D454011AAD4ECC19754C083C5E1CC2F5D45400102000000020000003E3E5E89C29754C0DCEDF405315D454067B6D72CC29754C07A70FCAA2F5D4540010200000002000000EE07068FC29754C0485F8498315D454085CA1CEBC19754C0FF039CD22F5D4540010200000002000000EE07068FC29754C0485F8498315D4540C47F8F73C29754C0329BCFB5315D454001020000000200000020A80991C29754C0A77686A92D5D4540CC20F971C29754C069E412112E5D454001020000000200000020A80991C29754C0A77686A92D5D454058D7BD86C29754C04103D19A2D5D4540010200000002000000A74C579DC29754C0AF0AE72D315D45401E847B60C29754C005209CFD2F5D4540010200000002000000A74C579DC29754C0AF0AE72D315D45403E3E5E89C29754C0DCEDF405315D4540010200000002000000405D0CA9C29754C025E2C17C315D45403E3E5E89C29754C0DCEDF405315D4540010200000002000000405D0CA9C29754C025E2C17C315D4540EE07068FC29754C0485F8498315D4540010200000002000000DBC165ACC29754C0B2542F79315D4540A74C579DC29754C0AF0AE72D315D4540010200000002000000DBC165ACC29754C0B2542F79315D4540405D0CA9C29754C025E2C17C315D45400102000000020000002A6C20BBC29754C0B4497969315D4540A74C579DC29754C0AF0AE72D315D45400102000000020000002A6C20BBC29754C0B4497969315D4540DBC165ACC29754C0B2542F79315D4540010200000002000000A0DB14D6C29754C0D0D2B84C315D454036C7BC88C29754C05E8B043E305D4540010200000002000000A0DB14D6C29754C0D0D2B84C315D45402A6C20BBC29754C0B4497969315D4540
+  </op>
+</test>
+</case>
+
+</run>
